--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ readme = "README.md"
 python = "^3.11"
 
 
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.16.1"
+reorder-python-imports = "^3.12.0"
+black = "^23.9.1"
+pylint = "^3.0.0"
+mypy = "^1.5.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
