fix python version to 3.11

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Dimitar Dimitrov <dimitrov.d@northeastern.edu>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.11"
 torch = {version = "^2.1.0+cu118", source = "torch-cuda-11.8"}
 torchvision = {version = "^0.16.0+cu118", source = "torch-cuda-11.8"}
 gitpython = "^3.1.40"
