--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cnn-model"
+name = "aanntwin"
 version = "0.1.0"
 description = ""
 authors = ["Dimitar Dimitrov <dimitrov.d@northeastern.edu>"]
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.11"
-torch = "^2.1.0"
-torchvision = "^0.16.0"
+# torch = "^2.1.0"
+# torchvision = "^0.16.0"
 gitpython = "^3.1.40"
 numpy = "^1.24"
 
